<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/power_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="@dimen/dp_360"
        android:layout_height="@dimen/dp_400"
        android:layout_gravity="center"
        android:background="@drawable/shape_first_page_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/welcome_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/exit"
                android:layout_width="@dimen/dp_14"
                android:layout_height="@dimen/dp_14"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/dp_7"
                android:layout_marginEnd="@dimen/dp_7"
                android:src="@drawable/btn_close_normal" />

            <TextView
                android:id="@+id/welcome_use"
                android:layout_width="@dimen/dp_194"
                android:layout_height="@dimen/dp_24"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_34"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/id_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_53"
                android:layout_marginTop="@dimen/dp_46"
                android:text="@string/id_password"
                android:textColor="#B5B5B5 "
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/dp_46"
                android:layout_marginEnd="@dimen/dp_56"
                android:text="@string/code"
                android:textColor="#B5B5B5 "
                android:textSize="14sp"
                android:visibility="invisible" />

            <View
                android:id="@+id/line_left"
                android:layout_width="@dimen/dp_76"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@+id/id_pwd"
                android:layout_marginStart="@dimen/dp_56"
                android:background="@color/press_text"
                android:visibility="visible" />

            <View
                android:id="@+id/line_right"
                android:layout_width="@dimen/dp_49"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@+id/code"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dp_60"
                android:background="@color/press_text"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_46">

            <RelativeLayout
                android:id="@+id/input_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/id"
                    android:layout_width="@dimen/dp_252"
                    android:layout_height="@dimen/dp_19"
                    android:background="@null"
                    android:hint="@string/hint_id"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="#BBBBBB "
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/sp_13" />
            </RelativeLayout>

            <View
                android:id="@+id/line1"
                android:layout_width="@dimen/dp_252"
                android:layout_height="1px"
                android:layout_below="@+id/input_set"
                android:layout_centerHorizontal="true"
                android:background="#E6E6E6" />

            <RelativeLayout
                android:id="@+id/pwd_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line1"
                android:layout_alignStart="@+id/input_set"
                android:layout_marginTop="@dimen/dp_40">

                <EditText
                    android:id="@+id/pwd"
                    android:layout_width="@dimen/dp_236"
                    android:layout_height="@dimen/dp_19"
                    android:background="@null"
                    android:hint="@string/hint_pwd"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="#BBBBBB "
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/sp_13" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/show_password"
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_10"
                android:layout_above="@+id/line2"
                android:layout_marginBottom="@dimen/dp_6"
                android:layout_toEndOf="@+id/pwd_set">

                <ImageView
                    android:id="@+id/show_password_switch"
                    android:layout_width="@dimen/dp_16"
                    android:layout_height="@dimen/dp_10"
                    android:background="@drawable/invisible" />
            </RelativeLayout>

            <View
                android:id="@+id/line2"
                android:layout_width="@dimen/dp_252"
                android:layout_height="1px"
                android:layout_below="@+id/pwd_set"
                android:layout_centerHorizontal="true"
                android:background="#E6E6E6" />

            <RelativeLayout
                android:id="@+id/save_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line2"
                android:layout_alignStart="@+id/input_set"
                android:layout_marginTop="@dimen/dp_15"
                android:visibility="invisible">

                <ImageView
                    android:id="@+id/select_bkg"
                    android:layout_width="@dimen/dp_13"
                    android:layout_height="@dimen/dp_13"
                    android:layout_marginTop="3px"
                    android:background="@drawable/un_select" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_9"
                    android:layout_toEndOf="@id/select_bkg"
                    android:text="@string/save_id"
                    android:textColor="#B5B5B5"
                    android:textSize="10sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/login"
                android:layout_width="@dimen/dp_265"
                android:layout_height="@dimen/dp_38"
                android:layout_below="@+id/save_id"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@drawable/shape_login_bg"
                android:gravity="center"
                android:text="@string/confirm_button"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>